Changelog
=========

trunk (0.1dev)
--------------

- decode subject header, used as title [hplocher]
- refactor adapter, use IBlogEntryFactory [hplocher]
- add adapter to create a Blog Entry [hplocher]
  (title, body text, only atm)
